--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<AnchorPane fx:id="anchorPane" onKeyPressed="#handleKeyPressed" xmlns="http://javafx.com/javafx/8.0.121"
+<AnchorPane fx:id="anchorPane" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/8.0.121"
             xmlns:fx="http://javafx.com/fxml/1" fx:controller="tron.controller.MainController">
     <children>
         <Pane fx:id="contentPane" layoutX="0.5" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
