--- a/src/main/resources/fxml/startMenu.fxml
+++ b/src/main/resources/fxml/startMenu.fxml
@@ -4,7 +4,8 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"
+<?import java.lang.String?>
+<AnchorPane stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="tron.controller.MenuController">
     <children>
         <Pane fx:id="contentPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
@@ -12,18 +13,23 @@
             <children>
                 <ImageView fx:id="logoImageView" fitHeight="180.0" fitWidth="320.0" layoutX="480.0" layoutY="14.0"
                            pickOnBounds="true" preserveRatio="true"/>
-                <Button fx:id="hostGameButton" layoutX="480.0" layoutY="279.0" mnemonicParsing="false"
+                <Button fx:id="hostGameButton" layoutX="481.0" layoutY="291.0" mnemonicParsing="false"
                         onAction="#hostButtonPressed" prefHeight="34.0" prefWidth="320.0" text="Создать игру"
                         textFill="#0055ff"/>
-                <Button fx:id="connectButton" layoutX="480.0" layoutY="326.0" mnemonicParsing="false"
+                <Button fx:id="connectButton" layoutX="481.0" layoutY="338.0" mnemonicParsing="false"
                         onAction="#connectButtonPressed" prefHeight="34.0" prefWidth="320.0" text="Подключиться"
-                        textFill="#0059ff"/>
-                <TextField fx:id="addressTextField" layoutX="480.0" layoutY="381.0" prefHeight="25.0" prefWidth="320.0"
+                        textFill="#0059ff">
+                    <styleClass>
+                        <String fx:value="button"/>
+                        <String fx:value="button"/>
+                    </styleClass>
+                </Button>
+                <TextField fx:id="addressTextField" layoutX="481.0" layoutY="393.0" prefHeight="25.0" prefWidth="320.0"
                            promptText="Введите IP"/>
-                <Button fx:id="enterButton" layoutX="614.0" layoutY="416.0" mnemonicParsing="false"
+                <Button fx:id="enterButton" layoutX="615.0" layoutY="428.0" mnemonicParsing="false"
                         onAction="#enterButtonPressed" prefHeight="25.0" prefWidth="53.0" text="Войти"
                         textFill="#0059ff"/>
-                <Label fx:id="errorLabel" alignment="CENTER" layoutX="479.0" layoutY="454.0" prefHeight="17.0"
+                <Label fx:id="errorLabel" alignment="CENTER" layoutX="480.0" layoutY="466.0" prefHeight="17.0"
                        prefWidth="320.0" text="Невозможно подключиться к серверу" textFill="RED"/>
             </children>
         </Pane>
